Bug 168318 - EDITING - Box resizing becomes erratic
Summary: EDITING - Box resizing becomes erratic
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Laurent Balland
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords: bibisected, bisected, regression
: 168232 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-08 07:45 UTC by Robert Cabane
Modified: 2026-01-20 16:09 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Step 1 (58.95 KB, image/png)
2025-09-08 07:46 UTC, Robert Cabane
Details
Step 1 - screenshot (72.69 KB, image/png)
2025-09-08 07:52 UTC, Robert Cabane
Details
Step 2 - screenshot (72.93 KB, image/png)
2025-09-08 07:53 UTC, Robert Cabane
Details
Step 3 - screenshot (68.05 KB, image/png)
2025-09-08 07:54 UTC, Robert Cabane
Details
odg test case (18.25 KB, application/vnd.oasis.opendocument.graphics)
2025-09-08 08:04 UTC, Robert Cabane
Details
odg test case (completed) (26.59 KB, application/vnd.oasis.opendocument.graphics)
2025-09-08 12:29 UTC, Robert Cabane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Cabane 2025-09-08 07:45:48 UTC
Description:
The very last version of Lo Draw exhibits a strange behavior, related to the EDITING (resizing) of rectangular boxes.

Steps to Reproduce:
1.Create a rectangular box 
2.Rotate it by any angle (not 90°)
3.Try to resize it using the mouse


Actual Results:
The box suddenly adopts a very different shape

Expected Results:
The box corner should remain quite near of the mouse pointer


Reproducible: Always


User Profile Reset: No

Additional Info:
This misbehavior did not appear in LO 25.2
Comment 1 Robert Cabane 2025-09-08 07:46:46 UTC
Created attachment 202734 [details]
Step 1

The box I wanted to resize
Comment 2 Robert Cabane 2025-09-08 07:47:43 UTC
Finally, I resized my boxes using the properties dialog (F4)
Comment 3 Robert Cabane 2025-09-08 07:52:23 UTC
Created attachment 202735 [details]
Step 1 - screenshot
Comment 4 Robert Cabane 2025-09-08 07:53:36 UTC
Created attachment 202736 [details]
Step 2 - screenshot

The mouse pointer comes near the box corner
Comment 5 Robert Cabane 2025-09-08 07:54:27 UTC
Created attachment 202737 [details]
Step 3 - screenshot

Trying to resize
Comment 6 Robert Cabane 2025-09-08 07:57:46 UTC
Add. info :
OpenSUSE Linux Leap
KDE Plasma
Screen size 1920 × 1080
Comment 7 Robert Cabane 2025-09-08 07:58:30 UTC
The same erratic behavior happens whatever the box handle is used.
Comment 8 Robert Cabane 2025-09-08 08:04:56 UTC
Created attachment 202738 [details]
odg test case

I've made a simple test case, with explanations.
Comment 9 Robert Cabane 2025-09-08 12:29:45 UTC
Created attachment 202743 [details]
odg test case (completed)

Another test. It seems that the (wrong) distance between the mouse pointer and the box corner has to do with the rotation angle.
In other words : something has changed in the underlying algorithm in the 25.8 version, and should be revised.
Comment 10 Robert Cabane 2025-09-15 20:54:08 UTC
Additional evidence : this bug also affects Impress (not only Draw) !
Comment 11 raal 2025-09-16 15:36:05 UTC
Confirm with Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c2930f9721f5186c5cc96d6ff28eeaa10c205e60
CPU threads: 4; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded

but not with 7.3
Comment 12 raal 2025-09-16 15:42:43 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-25.8.
Adding Cc: to Laurent Balland ; Could you possibly take a look at this one?
Thanks
 aebe85f95f618b47050f4b68f76c5ebc4f532c8a is the first bad commit
commit aebe85f95f618b47050f4b68f76c5ebc4f532c8a
Author: Jenkins Build User <tdf@maggie.tdf>
Date:   Tue May 27 17:19:22 2025 +0200

    source edd0991c3cc1c5ae439e33873c2567ee62d0e710


184931: Rezing SdrObject: Remove duplicate code | https://gerrit.libreoffice.org/c/core/+/184931
Comment 13 Robert Cabane 2025-09-16 16:13:14 UTC
> I see nothing obviously wrong with this, nice cleanup, thanks. :-)
:-(
Comment 14 Laurent Balland 2025-09-16 17:14:07 UTC
(In reply to raal from comment #12)
> This seems to have begun at the below commit in bibisect repository/OS
> linux-64-25.8.
> Adding Cc: to Laurent Balland ; Could you possibly take a look at this one?
> Thanks
>  aebe85f95f618b47050f4b68f76c5ebc4f532c8a is the first bad commit
> commit aebe85f95f618b47050f4b68f76c5ebc4f532c8a
> Author: Jenkins Build User <tdf@maggie.tdf>
> Date:   Tue May 27 17:19:22 2025 +0200
> 
>     source edd0991c3cc1c5ae439e33873c2567ee62d0e710
> 
> 
> 184931: Rezing SdrObject: Remove duplicate code |
> https://gerrit.libreoffice.org/c/core/+/184931

Yes, reverting this patch fix the bug. I'm going to remove it.
Sorry for that.
Comment 15 Robert Cabane 2025-09-16 18:51:42 UTC
many thanks
Comment 16 Commit Notification 2025-09-16 20:48:49 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/183941f9e0668b0963e0157f2d9c414b58741fd6

tdf#168318 Revert "Rezing SdrObject: Remove duplicate code"

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2025-09-17 06:53:04 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/a2ca00636df4f3a709b061ce66fdd0b68a5ac62e

tdf#168318 Revert "Rezing SdrObject: Remove duplicate code"

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2025-09-17 14:33:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ec548605c855983cedc87ceef6b7fecfdfd2a47

tdf#168318: sw_tiledrendering: Add test

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2025-09-22 06:45:38 UTC
Laurent Balland committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e9424085769f6143ba7be9a9abb6e7b57e34bf9b

follow-up tdf#168318 Remove duplicate code

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Robert Cabane 2025-10-13 09:07:12 UTC
Just downloaded 25.8.2 version of LO (Linux rpm)
Tested
Bug (well & quickly) fixed !
Thank you all
Comment 21 Buovjaga 2026-01-20 16:09:26 UTC
*** Bug 168232 has been marked as a duplicate of this bug. ***