follow-up tdf#168318 Remove duplicate code

Removing duplicate code in resizing SdrObject was not incorrect in
https://gerrit.libreoffice.org/184931
After reverting it, this commit fix the problem to avoid tdf#168318
by using correted position point after rotating and shearing

Change-Id: I908918213141fc911c5e709d3301d83ff0652ad7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191294
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>