include/svx/svdobj.hxx
@@ -917,6 +917,7 @@ protected:
 
     virtual std::unique_ptr<sdr::contact::ViewContact> CreateObjectSpecificViewContact();
 
+    static void ImpCommonDragCalcRect(const SdrDragStat& rDrag, tools::Rectangle& rTmpRect, const Point& rPos);
     tools::Rectangle ImpDragCalcRect(const SdrDragStat& rDrag) const;
 
     // for GetDragComment
